--- a/esercizio_5/esercizio5.css
+++ b/esercizio_5/esercizio5.css
@@ -1,8 +1,10 @@
+h1 { color: black}
 @media (min-width: 600px) {
     h1 {
         color: green
     }
 }
+img {width: 100%;}
 @media (min-width: 800px) {
     img {
         width: 49%;
